--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior-2.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior-2.html
@@ -66,7 +66,7 @@
         
         let top = buttonCoords.top - tooltip.offsetHeight - 5;
         if (top < 0) {
-          top = 0;
+          top = buttonCoords.bottom + 5;
         }
 
         tooltip.style.left = left + "px";
