--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior-2.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior-2.html
@@ -36,6 +36,10 @@
       One more button
     </button>
 
+    <button data-tooltip="the tooltip is longer than the element">
+      Short button
+    </button>
+
     <p>
       Scroll the page to make buttons appear on the top, 
       check if the tooltips show up correctly.
