--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
@@ -26,6 +26,11 @@
       </li>
     </ul>
 
+    <form>
+      <button type="submit" onclick="return false;">Submit</button>
+      <button type="submit" onclick="event.preventDefault();">One more submit</button>
+    </form>
+
     <script>
       function handleClick() {
         console.log("Bye!");
