--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
@@ -31,6 +31,14 @@
       <button type="submit" onclick="event.preventDefault();">One more submit</button>
     </form>
 
+    <div>
+      <ul id="menu" class="menu">
+        <li><a href="/html">HTML</a></li>
+        <li><a href="/javascript">JavaScript</a></li>
+        <li><a href="/css">CSS</a></li>
+      </ul>
+    </div>
+
     <script>
       function handleClick() {
         console.log("Bye!");
