--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
@@ -49,6 +49,10 @@
         console.log(e.type);
         e.preventDefault();
       }
+
+      document.getElementById("menu").onclick = function(e) {
+        return false;
+      }
     </script>
   </body>
 </html>
