--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
@@ -22,6 +22,10 @@
         border: 1px solid #0076a3;
         background-color: #0095cd;
       }
+
+      .menu > li:hover a {
+        background-color: #007ead;
+      }
     </style>
   </head>
   <body>
