--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
@@ -24,6 +24,7 @@
       }
 
       .menu > li:hover a {
+        /* text-decoration: none; */
         background-color: #007ead;
       }
     </style>
