--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
@@ -70,6 +70,12 @@
         onfocus="this.value = ''" 
         onblur="this.value='Focus works'"
       >
+      <input 
+        type="text" 
+        value="Click me"
+        onmousedown="return false;"
+        onfocus="this.value='Ola, tudo bem?'"
+      >
     </form>
 
     <script>
