--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
@@ -15,9 +15,9 @@
         text-decoration: none;
         font: 14px/100% sans-serif;
         padding: 0.5em 2em 0.55em;
-        text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
+        text-shadow: 0 1px 1px rgba(0, 0, 0, .3);
         border-radius: 0.5em;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
         color: #d9eef7;
         border: 1px solid #0076a3;
         background-color: #0095cd;
