Browser default actions

--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
@@ -99,6 +99,7 @@
         return false;
       }
 
+      // use passive: true
       document.addEventListener("touchmove", function() {
         console.log("Hii");
         // if passive is true, means the browser won't cancell the scrolling
