--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
@@ -78,6 +78,10 @@
       >
     </form>
 
+    <div style="margin-top: 10px;">
+      <button>Right-click shows browser context menu</button>
+    </div>
+
     <script>
       function handleClick() {
         console.log("Bye!");
