Browser default actions

--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
@@ -80,6 +80,9 @@
 
     <div style="margin-top: 10px;">
       <button>Right-click shows browser context menu</button>
+      <button oncontextmenu="alert('Ola'); return false;">
+        Right-click shows our context menu
+      </button>
     </div>
 
     <script>
