Browser default actions

--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
@@ -134,6 +134,11 @@
         e.preventDefault();
         alert(e.target.nodeName);
       }
+
+      document.oncontextmenu = function(e) {
+        e.preventDefault();
+        alert(e.currentTarget.nodeName);
+      }
     </script>
   </body>
 </html>
