Browser default actions

--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
@@ -92,6 +92,13 @@
       </button>
     </div>
 
+    <div style="background-color: lightskyblue; margin-top: 10px;">
+      <p>Right-click for the document menu</p>
+      <button id="button2">
+        Right-click for the button menu (fixed with event.stopPropagation)
+      </button>
+    </div>
+
     <script>
       function handleClick() {
         console.log("Bye!");
