--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
@@ -149,6 +149,7 @@
 
       document.getElementById("button2").oncontextmenu = function(e) {
         e.preventDefault();
+        e.stopPropagation();
         alert(e.target.nodeName);
       }
     </script>
