Browser default actions

--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
@@ -99,6 +99,8 @@
       </button>
     </div>
 
+    <h3>Nested context menus architecture</h3>
+
     <script>
       function handleClick() {
         console.log("Bye!");
