Browser default actions

--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/nested-context-menus-architecture.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/nested-context-menus-architecture.html
@@ -2,10 +2,20 @@
 <html>
   <head>
     <style>
-      
+
     </style>
   </head>
   <body>
+    <h3>Nested context menus architecture</h3>
+
+    <div id="outer">
+      <div id="middle">
+        <div id="inner">
+          <button>Click here!</button>
+        </div>
+      </div>
+    </div>
+    
     <script>
       console.log("Yeah");
     </script>
