Browser default actions

--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/nested-context-menus-architecture.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/nested-context-menus-architecture.html
@@ -2,7 +2,20 @@
 <html>
   <head>
     <style>
+      #outer {
+        padding: 50px;
+        background-color: lightpink;
+      }
 
+      #middle {
+        padding: 50px;
+        background-color: lightgreen;
+      }
+
+      #inner {
+        padding: 50px;
+        background-color: lightskyblue;
+      }
     </style>
   </head>
   <body>
@@ -15,7 +28,7 @@
         </div>
       </div>
     </div>
-    
+
     <script>
       console.log("Yeah");
     </script>
