Browser default actions

--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/index.html
@@ -48,6 +48,9 @@
           handle prevent default
         </a>
       </li>
+      <li>
+        [6] - <input onclick="return false;" type="checkbox"> Accept
+      </li>
     </ul>
 
     <form>
