Browser default actions

--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/catch-links-in-the-element.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/catch-links-in-the-element.html
@@ -17,9 +17,15 @@
         about modern standards?
       </p>
     </fieldset>
-    
+
     <script>
-      console.log("Ola tudo bem?");
+      document.getElementById("contents").onclick = function(e) {
+        const link = e.target.closest("a");
+        if (!link) {
+          return;
+        }
+        console.log(e.target);
+      }
     </script>
   </body>
 </html>
