Browser default actions

--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/catch-links-in-the-element.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/catch-links-in-the-element.html
@@ -24,7 +24,10 @@
         if (!link) {
           return;
         }
-        console.log(e.target);
+
+        if (!confirm("Leave for " + link.href + "?")) {
+          e.preventDefault();
+        }
       }
     </script>
   </body>
