Browser default actions

--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/catch-links-in-the-element-2.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/catch-links-in-the-element-2.html
@@ -18,8 +18,14 @@
       </p>
     </fieldset>
 
+    <a href="/" id="external">Click here!</a>
+
     <script>
       const contents = document.getElementById("contents");
+
+      document.getElementById("external").onclick = function (e) {
+        return false;
+      }
 
       contents.onclick = function(e) {
         const target = e.target.closest("a");
