Browser default actions

--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/image-gallery.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/image-gallery.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <p>
+      <img id="largeImg" src="https://en.js.cx/gallery/img1-lg.jpg" alt="Large image">
+    </p>
     <script>
       console.log("Ola tudo bem?");
     </script>
