Browser default actions

--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/image-gallery.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/image-gallery.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      #largeImg {
+        border: 1px solid #ccc;
+        width: 550px;
+        height: 400px;
+        padding: 5px;
+      }
+    </style>
+  </head>
   <body>
     <p>
       <img id="largeImg" src="https://en.js.cx/gallery/img1-lg.jpg" alt="Large image">
