--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/image-gallery.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/image-gallery.html
@@ -14,6 +14,14 @@
     <p>
       <img id="largeImg" src="https://en.js.cx/gallery/img1-lg.jpg" alt="Large image">
     </p>
+
+    <ul id="thumbs">
+      <li>
+        <a href="https://en.js.cx/gallery/img2-lg.jpg" title="Image 2">
+          <img src="https://en.js.cx/gallery/img2-thumb.jpg">
+        </a>
+      </li>
+    </ul>
     <script>
       console.log("Ola tudo bem?");
     </script>
