Browser default actions

--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/image-gallery.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/image-gallery.html
@@ -21,6 +21,26 @@
           <img src="https://en.js.cx/gallery/img2-thumb.jpg">
         </a>
       </li>
+      <li>
+        <a href="https://en.js.cx/gallery/img3-lg.jpg" title="Image 3">
+          <img src="https://en.js.cx/gallery/img3-thumb.jpg">
+        </a>
+      </li>
+      <li>
+        <a href="https://en.js.cx/gallery/img4-lg.jpg" title="Image 4">
+          <img src="https://en.js.cx/gallery/img4-thumb.jpg">
+        </a>
+      </li>
+      <li>
+        <a href="https://en.js.cx/gallery/img5-lg.jpg" title="Image 5">
+          <img src="https://en.js.cx/gallery/img5-thumb.jpg">
+        </a>
+      </li>
+      <li>
+        <a href="https://en.js.cx/gallery/img6-lg.jpg" title="Image 6">
+          <img src="https://en.js.cx/gallery/img6-thumb.jpg">
+        </a>
+      </li>
     </ul>
     <script>
       console.log("Ola tudo bem?");
