--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/image-gallery.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/image-gallery.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font: 75%/120% sans-serif;
+      }
+
       #largeImg {
         border: 1px solid #ccc;
         width: 550px;
