Browser default actions

--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/image-gallery.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/image-gallery.html
@@ -8,6 +8,15 @@
         font: 75%/120% sans-serif;
       }
 
+      #thumbs {
+        padding: 0;
+        margin: 0;
+      }
+
+      #thumbs li {
+        list-style: none;
+      }
+
       #largeImg {
         border: 1px solid #ccc;
         width: 550px;
