Browser default actions

--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/image-gallery.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/image-gallery.html
@@ -17,6 +17,19 @@
         list-style: none;
       }
 
+      #thumbs a {
+        border: 1px solid #ccc;
+        width: 100px;
+        height: 100px;
+        padding: 3px;
+        margin: 2px;
+        float: left;
+      }
+
+      #thumbs a:hover {
+        border-color: #FF9900;
+      }
+
       #largeImg {
         border: 1px solid #ccc;
         width: 550px;
