Browser default actions

--- a/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/image-gallery.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/browser-default-actions/tasks/image-gallery.html
@@ -71,7 +71,20 @@
       </li>
     </ul>
     <script>
-      console.log("Ola tudo bem?");
+      document.getElementById("thumbs").onclick = function(e) {
+        const target = e.target.closest("a");
+        if (!target) {
+          return;
+        }
+        showThumbnail(target.href, target.title);
+        return false;
+      }
+
+      function showThumbnail(href, title) {
+        const largeImg = document.getElementById("largeImg");
+        largeImg.src = href;
+        largeImg.alt = title;
+      }
     </script>
   </body>
 </html>
