Dispatching custom events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <button onclick="alert('Click')">Autoclick</button>
     <script>
       const event = new Event("zas", { 
         bubbles: false, 
