Dispatching custom events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/index.html
@@ -10,7 +10,7 @@
       });
 
       function handleClick(e) {
-        alert(e.isTrusted);
+        alert(`isTrusted: ${e.isTrusted}`);
       }
 
       document.querySelector("button").dispatchEvent(event);
