--- a/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/index.html
@@ -2,6 +2,7 @@
 <html>
   <body>
     <button onclick="handleClick(event)">Autoclick</button>
+    <h3>Hello from the script!</h3>
     <script>
       const event = new Event("click", { 
         bubbles: false, 
@@ -10,7 +11,7 @@
       });
 
       function handleClick(e) {
-        alert(`isTrusted: ${e.isTrusted}`);
+        console.log(`isTrusted: ${e.isTrusted}`);
       }
 
       document.querySelector("button").dispatchEvent(event);
