Dispatching custom events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/index.html
@@ -13,8 +13,10 @@
       function handleClick(e) {
         console.log(`isTrusted: ${e.isTrusted}`);
       }
-
       document.querySelector("button").dispatchEvent(event);
+
+      const helloEvent = new Event("hello", { bubbles: true });
+      document.querySelector("h3").dispatchEvent(helloEvent);
     </script>
   </body>
 </html>
