Dispatching custom events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/index.html
@@ -16,6 +16,9 @@
       document.querySelector("button").dispatchEvent(event);
 
       const helloEvent = new Event("hello", { bubbles: true });
+      document.querySelector("h3").addEventListener("hello", function(e) {
+        console.log(`${e.type}: ${e.target.nodeName}`)
+      });
       document.querySelector("h3").dispatchEvent(helloEvent);
     </script>
   </body>
