--- a/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/index.html
@@ -19,6 +19,10 @@
       document.querySelector("h3").addEventListener("hello", function(e) {
         console.log(`${e.type}: ${e.target.nodeName}`)
       });
+
+      document.addEventListener("hello", function(e) {
+        console.log(`${e.type}: ${e.target.nodeName}`);
+      });
       document.querySelector("h3").dispatchEvent(helloEvent);
     </script>
   </body>
