Dispatching custom events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/index.html
@@ -21,8 +21,8 @@
       });
 
       document.addEventListener("hello", function(e) {
-        console.log(`${e.type}: ${e.target.nodeName}`);
-      });
+        console.log(`${e.type}: ${e.target.nodeName}, ${e.currentTarget.nodeName}`);
+      }, { capture: true });
       document.querySelector("h3").dispatchEvent(helloEvent);
     </script>
   </body>
