Dispatching custom events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/index.html
@@ -3,6 +3,8 @@
   <body>
     <button onclick="handleClick(event)">Autoclick</button>
     <h3>Hello from the script!</h3>
+
+    <h3>MouseEvent, KeyboardEvent and others</h3>
     <script>
       const event = new Event("click", { 
         bubbles: false, 
