Dispatching custom events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/index.html
@@ -46,6 +46,9 @@
       
       console.log(genericEvent.clientX);
       console.log(genericEvent.clientY);
+
+      genericEvent.clientX = 100;
+      console.log(genericEvent.clientX);
     </script>
   </body>
 </html>
