Dispatching custom events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/custom-events.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/custom-events.html
@@ -10,6 +10,12 @@
           name: "John"
         }
       });
+
+      const h1 = document.querySelector("h1");
+      h1.addEventListener("hello", function(e) {
+        console.log(e.detail.name);
+      });
+      h1.dispatchEvent(event);
     </script>
   </body>
 </html>
