Dispatching custom events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/custom-events.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/custom-events.html
@@ -12,6 +12,7 @@
       });
 
       const h1 = document.querySelector("h1");
+      // Additional details come with the event to the handler
       h1.addEventListener("hello", function(e) {
         console.log(e.detail.name);
       });
