Dispatching custom events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/event-prevent-default.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/event-prevent-default.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <pre id="rabbit">
+      |\   /|
+       \|_|/
+       /. .\
+      =\_Y_/=
+       {>o<} 
+    </pre>
     <script>
       console.log("Ola, tudo bem?");
     </script>
