Dispatching custom events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/event-prevent-default.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/event-prevent-default.html
@@ -19,17 +19,16 @@
 
         const dispatch = rabbit.dispatchEvent(event);
 
-        console.log(dispatch);
-
         if (!dispatch) {
-          console.log("The action was prevented by a handler")
+          console.log("The action was prevented by a handler");
         } else {
-          console.log("Ola, tudo bem?");
-          // rabbit.hidden = true;
+          rabbit.hidden = true;
         }
       }
 
-      console.log("Ola, tudo bem?");
+      rabbit.addEventListener("hide", function(e) {
+        e.preventDefault();
+      });
     </script>
   </body>
 </html>
