--- a/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/events-in-events-are-synchronous.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/dispatching-custom-events/events-in-events-are-synchronous.html
@@ -24,10 +24,17 @@
       
       menu2.onclick = function() {
         console.log("v2: ", 1);
+        // instead of doing this
+        // run(menu2);
 
-        run(menu2);
+        // do this
+        setTimeout(function() {
+          run(menu2);
+        });
 
         console.log("v2: ", 2);
+        // or this
+        // run(menu2);
       }
 
       function run(elem) {
