--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <h2>Mouse event types</h2>
+    <button 
+      onmousedown="console.log('Mousedown')"
+      onmouseup="console.log('Mouseup')"
+    >
+      mousedown/mouseup
+    </button>
+
     <script>
       console.log("Ola tudo bem?");
     </script>
