--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
@@ -2,6 +2,7 @@
 <html>
   <body>
     <h2>Mouse event types</h2>
+    <h3>[1] - Mousedown/mouseup</h3>
     <button 
       onmousedown="console.log('Mousedown')"
       onmouseup="console.log('Mouseup')"
