--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
@@ -10,6 +10,14 @@
       mousedown/mouseup
     </button>
 
+    <h3>[2] - Mouseover/mouseout</h3>
+    <button
+      onmouseover="console.log('Mouseover')"
+      onmouseout="console.log('Mouseout')"
+    >
+      mouseover/mouseout
+    </button>
+
     <script>
       console.log("Ola tudo bem?");
     </script>
