--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
@@ -18,8 +18,11 @@
       mouseover/mouseout
     </button>
 
-    <script>
-      console.log("Ola tudo bem?");
-    </script>
+    <h3>[3] - Mousemove</h3>
+    <button onmousemove="console.log('Mousemove')">
+      mousemove
+    </button>
+
+    <script></script>
   </body>
 </html>
