--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
@@ -23,6 +23,9 @@
       mousemove
     </button>
 
+    <h3>[4] - Click</h3>
+    <button onclick="console.log('Click')">click</button>
+
     <script></script>
   </body>
 </html>
