--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
@@ -26,6 +26,11 @@
     <h3>[4] - Click</h3>
     <button onclick="console.log('Click')">click</button>
 
+    <h3>[5] - dblclick</h3>
+    <button ondblclick="console.log('dblclick')">
+      dblclick
+    </button>
+
     <script></script>
   </body>
 </html>
