--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
@@ -31,6 +31,11 @@
       dblclick
     </button>
 
+    <h3>[6] - contextmenu</h3>
+    <button oncontextmenu="console.log('Contextmenu')">
+      contextmenu
+    </button>
+
     <script></script>
   </body>
 </html>
