--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
@@ -36,6 +36,16 @@
       contextmenu
     </button>
 
+    <h2>Events order</h2>
+    <button
+      onclick="console.log('click')"
+      onmousedown="console.log('mousedown')"
+      onmouseup="console.log('mouseup')"
+      ondblclick="console.log('dblclick')"
+    >
+      Click me with right or the left mouse button
+    </button>
+
     <script></script>
   </body>
 </html>
