--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
@@ -42,6 +42,7 @@
       onmousedown="console.log('mousedown')"
       onmouseup="console.log('mouseup')"
       ondblclick="console.log('dblclick')"
+      oncontextmenu="console.log('contextmenu')"
     >
       Click me with right or the left mouse button
     </button>
