--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
@@ -67,12 +67,12 @@
           case 2: 
             log.textContent = "Right button clicked.";
             break;
-          case 3:
-            log.textContent = "Fourth button clicked.";
-            break;
-          case 4:
-            log.textContent = "Fifth button clicked.";
-            break;
+          // case 3:
+          //   log.textContent = "Fourth button clicked.";
+          //   break;
+          // case 4:
+          //   log.textContent = "Fifth button clicked.";
+          //   break;
           default:
             log.textContent = `Unknown button code: ${e.button}`;
         }
